# blas

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  library.h
.circleci/: config.yml
benchmark/: CMakeLists.txt
benchmark/eigen/: eigen_bench.cpp
benchmark/libra/: sse2_bench.cpp
include/: BUILD
include/blas/: matrix.h
include/blas/_base/: matrix_base.h
include/libra/: matrix.h
include/libra/_base/: matrix_base.h
test/: BUILD  CMakeLists.txt  matrix_test.cpp
